--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,7 +9,10 @@
   <strong>Email:</strong>
   <%= @user.email %>
 </p>
-
+<p>
+  <strong>Fisrt Post:</strong>
+  <%= @user.microposts.first.content %>
+</p>
 
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
