User show veiws first post from user

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,8 +10,12 @@
   <%= @user.email %>
 </p>
 <p>
-  <strong>Fisrt Post:</strong>
-  <%= @user.microposts.first.content %>
+  <strong>Fisrt Post: </strong>
+  <%= if @user.microposts.empty?
+          "No posts yet"
+       else
+          @user.microposts.first.content
+       end%>
 </p>
 
 
